force-app/main/default/objects/Non_Conformance_Report__c/Non_Conformance_Report__c.object-meta.xml
<CustomObject>
    <label>Non-Conformance Report</label>
    <nameField>
        <displayFormat>NCR-{0000}</displayFormat>
        <label>NCR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non-Conformance Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>