force-app/main/default/objects/Non_Conformance_Report__c/fields/Description_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Issue__c</fullName>
    <description>Details of defect or deviation</description>
    <label>Description of Issue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>