force-app/main/default/objects/Non_Conformance_Report__c/fields/Product_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Product_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Inspection</label>
    <referenceTo>Product_Inspection__c</referenceTo>
    <relationshipLabel>Non-Conformance Reports</relationshipLabel>
    <relationshipName>Non_Conformance_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>