force-app/main/default/objects/Non_Conformance_Report__c/fields/Resolution_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Closure_Date__c</fullName>
    <label>Resolution Closure Date</label>
    <type>Date</type>
</CustomField>