force-app/main/default/objects/Non_Conformance_Report__c/validationRules/Assigned_To.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_To</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR
        ( ISPICKVAL( Resolution_Status__c , &quot;Resolved&quot;),
           ISPICKVAL(Resolution_Status__c, &quot;Closed&quot;) 
         ) ,

   ISBLANK( Assigned_To__c ) 
)</errorConditionFormula>
    <errorMessage>Please assign the NCR before progressing it.</errorMessage>
</ValidationRule>