force-app/main/default/objects/Non_Conformance_Report__c/validationRules/Closed_NCR.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_NCR</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Resolution_Status__c , &quot;Closed&quot;),
  ISBLANK( Root_Cause_Analysis__c )  )</errorConditionFormula>
    <errorMessage>Please complete Root Cause Analysis before closing the NCR</errorMessage>
</ValidationRule>