force-app/main/default/objects/Non_Conformance_Report__c/validationRules/Closed_NCR_must_have_a_resolution_and_cl.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_NCR_must_have_a_resolution_and_cl</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Resolution_Status__c , &quot;Closed&quot;) , ISBLANK( Resolution_Closure_Date__c ) )</errorConditionFormula>
    <errorMessage>Closed NCR must have a resolution closure date</errorMessage>
</ValidationRule>