force-app/main/default/objects/Non_Conformance_Report__c/validationRules/Resolution_Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Status_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISCHANGED( Resolution_Status__c) ,
      ISPICKVAL( PRIORVALUE(Resolution_Status__c),&quot;Closed&quot;),            NOT(ISPICKVAL(Resolution_Status__c, &quot;Closed&quot;))

       
)</errorConditionFormula>
    <errorMessage>You cannot move a Closed NCR back to a previous status.</errorMessage>
</ValidationRule>