force-app/main/default/objects/Non_Conformance_Report__c/validationRules/Root_Cause.validationRule-meta.xml
<ValidationRule>
    <fullName>Root_Cause</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Severity__c , &quot;High&quot;),
       ISBLANK( Root_Cause_Analysis__c ) ,
 NOT( ISPICKVAL( Resolution_Status__c , &quot;Open&quot;) )  )</errorConditionFormula>
    <errorMessage>High severity NCRs must have Root Cause Analysis once work begins.</errorMessage>
</ValidationRule>