force-app/main/default/objects/Non_Conformance_Report__c/validationRules/Severity.validationRule-meta.xml
<ValidationRule>
    <fullName>Severity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL( Severity__c , &quot;High&quot;) ,
  NOT( Escalated__c )   )</errorConditionFormula>
    <errorMessage>High severity NCRs must be escalated.</errorMessage>
</ValidationRule>