force-app/main/default/objects/Non_Conformance_Report__c/validationRules/Severity_Low_or_High.validationRule-meta.xml
<ValidationRule>
    <fullName>Severity_Low_or_High</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        Escalated__c ,

        OR( ISPICKVAL( Severity__c , &quot;Low&quot;),
            ISPICKVAL( Severity__c , &quot;High&quot;)
         ) ,
       NOT( ISPICKVAL( Resolution_Status__c , &quot;In Progess&quot;) )        
 
      )</errorConditionFormula>
    <errorMessage>Medium and Low severity issues can only be escalated when they are In Progress.</errorMessage>
</ValidationRule>