force-app/main/default/objects/Non_Conformance_Report__c/validationRules/Status_is_Closed_or_Resolved.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_is_Closed_or_Resolved</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(
         ISPICKVAL(Resolution_Status__c , &quot;Closed&quot;),                       
         ISPICKVAL(Resolution_Status__c , &quot;Resolved&quot;)
   ),
 ISBLANK( Target_Resolution_Date__c ) )</errorConditionFormula>
    <errorMessage>Resolved or Closed NCRs must have a Target Resolution Date.</errorMessage>
</ValidationRule>