force-app/main/default/objects/Non_Conformance_Report__c/validationRules/Target_Resoultion.validationRule-meta.xml
<ValidationRule>
    <fullName>Target_Resoultion</fullName>
    <active>true</active>
    <errorConditionFormula>Target_Resolution_Date__c  &lt;  Date_Reported__c</errorConditionFormula>
    <errorMessage>Target Resolution Date must be after the Date Reported.</errorMessage>
</ValidationRule>